tests/paczka1/small_fuzzy/79909014.err
Error in line 2: Wv6EMW A585 36,4
Error in line 5: Ok5pb4Ga8 S772 86,3
Error in line 12: S772 S784 74,1
